# gorin-skills

./: .gitignore  CONTRIBUTING.md  CONTRIBUTING_EN.md  LICENSE  README.md  README_EN.md  THIRD_PARTY_SKILLS.md  THIRD_PARTY_SKILLS_EN.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  skill_submission.md
.github/workflows/: lint.yml  test.yml
docs/: architecture.md  skill-development-guide.md  third-party-skills.md
openclaw/agent-team-composer/: .skill-meta.json  README.md  SKILL.md  package-lock.json  package.json  tsconfig.json
openclaw/ai-builder-digest/: .skill-meta.json  SKILL.md
openclaw/ai-image-digest/: .skill-meta.json  SKILL.md  build_digest.py
openclaw/atlas-ingest/: .skill-meta.json  SKILL.md  pyproject.toml
openclaw/autoresearch/: .skill-meta.json  SKILL.md
openclaw/baoyu-article-illustrator/: SKILL.md
openclaw/baoyu-comic/: SKILL.md
openclaw/baoyu-cover-image/: SKILL.md
openclaw/baoyu-format-markdown/: SKILL.md
openclaw/baoyu-image-gen/: SKILL.md
openclaw/baoyu-infographic/: SKILL.md
openclaw/baoyu-markdown-to-html/: SKILL.md
openclaw/edu-dispatch-builder/: .skill-meta.json  SKILL.md  pyproject.toml
openclaw/edu-dispatch-builder/references/: dispatch-template.md
openclaw/edu-dispatch-builder/scripts/: __init__.py  dispatch_builder.py
openclaw/edu-outline-review/: .skill-meta.json  SKILL.md  pyproject.toml
openclaw/edu-outline-review/references/: checklist.md
openclaw/edu-outline-review/scripts/: outline_review.py
scripts/: setup-skill.sh  validate-skill.sh
(+392 files in other folders)
