[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edu-dispatch-builder"
version = "0.1.0"
description = "Build self-contained edu-content dispatch prompts from Excel outlines."
readme = "SKILL.md"
requires-python = ">=3.10"
dependencies = [
  "openpyxl>=3.1.0",
  "pandas>=2.0.0",
]

[tool.setuptools]
include-package-data = true
packages = ["scripts"]
